# HttpUnoBridge

./: .gitignore  README.md  main.cpp  meson.build
api/handlers/: document.cpp  document.hpp
schemas/: api.hpp
services/: executor.cpp  executor.hpp  http_api.cpp  http_api.h  http_api.hpp
services/libreoffice/: document.cpp  document.hpp  document_repository.cpp  document_repository.hpp
